# axum-project

./: Cargo.toml
src/: errors.rs  main.rs  model.rs
src/web/: routes_login.rs  routes_tickets.rs
tests/: quick_test.rs
